# adaptiveengineer

./: .gitignore  .pre-commit-config.yaml  =24.1.1  BASELINE_METRICS_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Debug_Transformation.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE1_ANALYSIS_REPORT.md  PHASE1_COMPLETION.md  PHASE1_IMPLEMENTATION.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETION.md  PHASE2_TESTING_REPORT.md  PHASE3_COMPLETION.md  PHASE3_IMPLEMENTATION.md  PHASE4_COMPLETION.md  PHASE5_IMPLEMENTATION.md  README.md  adaptiveengineer.py  coverage.json  example_phase1.py  example_phase2.py  example_phase3.py  example_phase4.py  example_phase5.py  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  setup.py
.github/workflows/: ci.yml  run_simulation.yml
configs/: sample_run.yaml
core/: __init__.py  adaptive_defense.py  adaptive_learning.py  advanced_communication.py  adversary_simulation.py  agent_lifecycle.py  ai_ethics.py  autonomy_engine.py  behavior_strategy.py  behavioral_frequency.py  collective_cognition.py  consensus.py  constitutional_framework.py  contract_net.py  event_integrations.py  evolution_engine.py  governance.py  human_loop.py  immune_system.py  incident_memory.py  keystroke_frequency.py  knowledge_graph.py  large_scale_simulation.py  living_graph.py  memory_system.py  messaging.py  network_frequency_analyzer.py  node_communication.py  openness_engine.py  plugin_base.py  plugin_manager.py  predictive_homeostasis.py  real_world_bridge.py  reputation_ledger.py  sensory_cortex.py  social_signals.py  spatial_utils.py  swarm_defense.py  swarm_intelligence.py  symbiosis_fitness.py  (+6 more)
docs/: ADVANCED_SENSORS.md  CYBER_DEFENSE.md  FREQUENCY_INTELLIGENCE.md  SWARM_ROBOTICS.md
example/: example_3d_drone_swarm.py  example_cyber_defense.py  example_cyber_sensors.py  example_frequency_defense.py  example_hybrid_defense_swarm.py  example_living_graph.py  example_phase1.py  example_phase2.py  example_phase2_emergence.py  example_phase3.py  example_phase4.py  example_phase5.py  example_swarm_robotics.py
neuralive/: README.md  __init__.py
neuralive/core/: __init__.py
neuralive/utils/: __init__.py  memory_utils.py
phaseimplementation/: PHASE2_IMPLEMENTATION.md  PHASE4_IMPLEMENTATION.md
plugins/: __init__.py  acoustic_frequency.py  advanced_sensors.py  artificial_life.py  communication.py  it_operations.py  phase2_emergence.py  phase3_sentience.py  phase4_polity.py  rf_spectrum_analyzer.py  security.py  swarm_robotics.py  vibration_frequency.py
populations/: detection_meta.json  detection_pop.json  detection_stats.jsonl
simulation/: adversarial_environment.py  run_simulation.py
tests/: test_adaptive_defense.py  test_adversarial_environment.py  test_aliveloop_communication.py  test_benchmarks.py  test_consensus.py  test_defensive_reasoning.py  test_frequency_analyzers.py  test_memory_system.py  test_neuralive_utils.py  test_node_communication.py  test_phase1_features.py  test_phase2_emergence.py  test_smoke.py  test_social_signals.py  test_swarm_robotics.py  test_system_metrics_bridge.py  test_threat_patterns.py  test_trust_network_ops.py
