[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptiveengineer"
version = "2.0.0"
description = "NeuralLive - Artificial Life System with Self-Awareness & Swarm Intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "V1B3hR", email = ""}
]
keywords = ["artificial-life", "swarm-intelligence", "self-awareness", "ai", "alife"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Artificial Life",
]

dependencies = [
    "numpy>=1.20.0",
    "pyyaml>=5.4.0",
    "pytest>=7.0.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.1.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "bandit>=1.7.6",
    "pre-commit>=3.6.0",
    "pytest-cov>=4.1.0",
    "radon>=6.0.1",
    "safety>=3.0.0",
    "types-PyYAML>=6.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/V1B3hR/adaptiveengineer"
Repository = "https://github.com/V1B3hR/adaptiveengineer"
Documentation = "https://github.com/V1B3hR/adaptiveengineer/blob/main/README.md"
Issues = "https://github.com/V1B3hR/adaptiveengineer/issues"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | populations
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/populations/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "chaos: marks tests as chaos engineering tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/populations/*",
    "*/example/*",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0902",  # Too many instance attributes
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "R0915",  # Too many statements
    "W0212",  # Access to a protected member
]

[tool.pylint.format]
max-line-length = 79

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 6
max-branches = 15
max-statements = 60

[tool.bandit]
exclude_dirs = ["/tests", "/test", "/example"]
skips = ["B101", "B601"]
